# watch-agent

./: .gitignore  LICENSE  README.md  agent_status_writer.py  config.py  main.py  pyproject.toml
collector/: base.py  file_collector.py  manager.py  tmux_collector.py
dashboard/: app.py  styles.tcss
dashboard/widgets/: agent_badge.py  agent_card.py  summary_bar.py
docs/superpowers/plans/: 2026-03-25-watch-agent-dashboard.md
docs/superpowers/specs/: 2026-03-25-watch-agent-dashboard-design.md
tests/: test_agent_badge.py  test_agent_card.py  test_base.py  test_file_collector.py  test_manager.py  test_tmux_collector.py
