[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watch-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["collector*", "dashboard*"]
